Light types added

--- a/html/animationInfo.html
+++ b/html/animationInfo.html
@@ -19,7 +19,7 @@
 
 		<h2>Just update de animation variables!</h2>
 
-		<p>Basically to build simple animations you must update the variables that will govern the movement. In our project we add the <strong>rotateCylinder</strong> function inside the render loop as you can see in the code bellow.</p>
+		<p>Basically to build simple animations you must update the variables that will govern the movement. In our project we add the <strong>rotateCylinder</strong> function inside the render loop as you can see in the code below.</p>
 
 		<code>
 		function render()
