--- a/html/basicScene.html
+++ b/html/basicScene.html
@@ -19,7 +19,7 @@
 
 		<h2>Under the hood</h2>
 
-		<p>Basically we have, at the beginning, the definition of the scene, renderer and camera (the last two created through functions as they will be subject in further classes). To create the camera we must define where it will be created. By default the camera will point to the origin of the world. See the code bellow to understand how these elements are created.</p>
+		<p>Basically we have, at the beginning, the definition of the scene, renderer and camera (the last two created through functions as they will be subject in further classes). To create the camera we must define where it will be created. By default the camera will point to the origin of the world. See the code below to understand how these elements are created.</p>
 
 		<code>
 		var stats = initStats();          // To show FPS information
