--- a/html/keyboardExampleInfo.html
+++ b/html/keyboardExampleInfo.html
@@ -11,14 +11,14 @@
 		<h1>Keyboard Example</h1>
 		<br>
 		<hr>
-		<p>In this example you will learn how to deal with keyboard events in Threejs. Let's see how it works through the example bellow.</p>
+		<p>In this example you will learn how to deal with keyboard events in Threejs. Let's see how it works through the example below.</p>
 
 		<iframe src="../src/keyboardExample.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
 		<a href="../src/keyboardExample.html" target="_blank">Open in a new tab</a>
 
 		<h2>Using the keyboard</h2>
 
-		<p>One option to work with keyboard in your projects is through the <strong>KeyboardState</strong> object. Basically you need to (1) create a global variable, (2) during the main loop update the object and (3) check the state of the keys. See the code bellow:
+		<p>One option to work with keyboard in your projects is through the <strong>KeyboardState</strong> object. Basically you need to (1) create a global variable, (2) during the main loop update the object and (3) check the state of the keys. See the code below:
 
 		<code>
 		// create global variable
