--- a/html/projectionInfo.html
+++ b/html/projectionInfo.html
@@ -12,7 +12,7 @@
 		<br>
 		<hr>
 
-		<p>In this project we can understand the differences between the two major types of cameras used in Computer Graphics projects - <strong>Perspective</strong> and <strong>Orthographic</strong>. Try the example bellow rotating the camera and changing between the two types of projection to view the differences in the result output.</p>
+		<p>In this project we can understand the differences between the two major types of cameras used in Computer Graphics projects - <strong>Perspective</strong> and <strong>Orthographic</strong>. Try the example below rotating the camera and changing between the two types of projection to view the differences in the result output.</p>
 
 		<iframe src="../src/projection.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
 		<a href="../src/projection.html" target="_blank">Open in a new tab</a>
