Light types added

--- a/html/lightingTypesInfo.html
+++ b/html/lightingTypesInfo.html
@@ -8,7 +8,7 @@
 		<link type="text/css" rel="stylesheet" href="resources/page.css" />
 	</head>
 	<body>
-		<h1>Lighting Types</h1>
+		<h1>Types of lights</h1>
 		<br>
 		<hr>
 
@@ -31,7 +31,7 @@
 
 		<figure>
 			<img src="img/lightTypes.png" width="1280">
-			<figcaption>Figure 1 - Ligth Types. From left to right we have Spot Light, Point Light and Directional Light</figcaption>
+			<figcaption>Figure 1 - Light Types. From left to right we have Spot Light, Point Light and Directional Light</figcaption>
 		</figure>
 
 		<p>
