--- a/html/textureExternalObjectsInfo.html
+++ b/html/textureExternalObjectsInfo.html
@@ -8,19 +8,47 @@
 		<link type="text/css" rel="stylesheet" href="resources/page.css" />
 	</head>
 	<body>
-		<h1>Title</h1>
+		<h1>Loading objects with textures</h1>
 		<br>
 		<hr>
 
-		<p>In this example...</p>
+		<p>The most important issue regarding the use of external objects with textures is to find ones with proper textures. It is not a easy task to apply textures to objects with no texture coordinates in its geometry. See in the project below an example of OBJ and GLTF objects with textures.</p>
 
 		<iframe src="../src/textureExternalObjects.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
 		<a href="../src/textureExternalObjects.html" target="_blank">Open in a new tab</a>
 
 
-		<h2>About...</h2>
+		<h2>Under the hood</h2>
 
-		<p>...</p>
+		<p>The process of loading objects with textures is straightforward (see <a href="geometriesExternalObjectsInfo.html" target="_blank">this link</a> for details). The main problem when using external objects with textures is to check if the files are correct. Let's see the OBJ structure for instance. The texture is normally called through the MTL file as shown in the code below (in this example, the <b>L200.png</b> file).</p>
+
+		<code>
+		newmtl blinn1SG
+		Kd 1.00 1.00 1.00
+		Ka 0.00 0.00 0.00
+		Tf 1.00 1.00 1.00
+		Ks 0.30 0.30 0.30
+		Ns 600
+		Ni 1.00
+		illum 2
+		map_Kd L200.png
+		</code>
+
+		<p>The whole texture is normally storage in a single file as shown in Figure 1.</p>
+
+		<figure>
+			<img src="img/textureExternal.png" width="1200">
+			<figcaption>Figure 1 - L200 object file visualization and its corresponding texture.</figcaption>
+		</figure>
+
+		<p>
+		More sophisticated objects can use multiple texture files to represent different parts of the object or different visual aspects as shown in Figure 2. In this example we have the <i>orca</i> GLTF object composed by three textures, one for the basic material, the second for metallic roughness and the last one representing the normal map. All files are called from the <i>scene.gltf</i> file inside de <i>orca</i> folder.
+		</p>
+
+		<figure>
+			<img src="img/textureExternalOrca.png" width="1200">
+			<figcaption>Figure 2 - Orca object composed by basic, metallic and normal textures.</figcaption>
+		</figure>
 
 	</body>
 </html>
