--- a/html/raytracingExample2Info.html
+++ b/html/raytracingExample2Info.html
@@ -8,15 +8,11 @@
 		<link type="text/css" rel="stylesheet" href="resources/page.css" />
 	</head>
 	<body>
-		<h1>Title</h1>
+		<h1>Ray Tracing - Example 2</h1>
 		<br>
 		<hr>
 
-		<p>In this example...</p>
-
-		<h2>About...</h2>
-
-		<p>...</p>
+		<p>In this second example we see a more complex scene. It's worth noting the differences between the time used to process the render blocks in the upper part of the scene (almost without objects) when comparing with the lower part.</p>
 
 		<iframe src="../src/raytracingExample2.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
 		<a href="../src/raytracingExample2.html" target="_blank">Open in a new tab</a>
