Minor code fixes

--- a/html/AR_BasicInfo.html
+++ b/html/AR_BasicInfo.html
@@ -8,14 +8,10 @@
 		<link type="text/css" rel="stylesheet" href="resources/page.css" />
 	</head>
 	<body>
-		<h1>Title</h1>
+		<h1>AR - Basic</h1>
 		<br>
 		<hr>
-		<p>In this example...</p>
-
-		<h2>About...</h2>
-
-		<p>...</p>
+		<p>Simple Augmented Reality example using ar.js. You must use (print or present in a second screen) the <a href="https://stemkoski.github.io/AR-Examples/markers/kanji.png" target="_blank">Kanji</a> marker in front of the camera to play with this example.</p>
 
 		<iframe src="../src/AR_Basic.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
 		<a href="../src/AR_Basic.html" target="_blank">Open in a new tab</a>
