--- a/html/VR_PanoramaInfo.html
+++ b/html/VR_PanoramaInfo.html
@@ -8,21 +8,13 @@
 		<link type="text/css" rel="stylesheet" href="resources/page.css" />
 	</head>
 	<body>
-
-
-		<h1>Title</h1>
+		<h1>VR - Panorama</h1>
 		<br>
 		<hr>
-
-		<p>In this example...</p>
+		<p>In this example you can observe how a panoramic image is displayed using Aframe.</p>
 
 		<iframe src="../src/VR_Panorama.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
 		<a href="../src/VR_Panorama.html" target="_blank">Open in a new tab</a>
-
-		<h2>About...</h2>
-
-		<p>...</p>
-
 
 	</body>
 </html>
