--- a/html/exampleMergeInfo.html
+++ b/html/exampleMergeInfo.html
@@ -8,15 +8,11 @@
 		<link type="text/css" rel="stylesheet" href="resources/page.css" />
 	</head>
 	<body>
-		<h1>Title</h1>
+		<h1>Merge Geometry</h1>
 		<br>
 		<hr>
 
-		<p>In this example...</p>
-
-		<h2>About...</h2>
-
-		<p>...</p>
+		<p>Merge Geometry example.</p>
 
 		<iframe src="../src/exampleMerge.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
 		<a href="../src/exampleMerge.html" target="_blank">Open in a new tab</a>
