--- a/html/VR_BasicInfo.html
+++ b/html/VR_BasicInfo.html
@@ -8,17 +8,13 @@
 		<link type="text/css" rel="stylesheet" href="resources/page.css" />
 	</head>
 	<body>
-		<h1>Title</h1>
+		<h1>VR - Primitives</h1>
 		<br>
 		<hr>
-		<p>In this example...</p>
+		<p>Example of primitive's creation using Aframe.</p>
 
 		<iframe src="../src/VR_Basic.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
 		<a href="../src/VR_Basic.html" target="_blank">Open in a new tab</a>
-
-		<h2>About...</h2>
-
-		<p>...</p>
 
 	</body>
 </html>
