--- a/html/exampleFirstPersonInfo.html
+++ b/html/exampleFirstPersonInfo.html
@@ -8,20 +8,14 @@
 		<link type="text/css" rel="stylesheet" href="resources/page.css" />
 	</head>
 	<body>
-		<h1>Title</h1>
+		<h1>First Person</h1>
 		<br>
 		<hr>
 
-		<p>In this example...</p>
-
-		<h2>About...</h2>
-
-		<p>...</p>
+		<p>First Person example.</p>
 
 		<iframe src="../src/exampleFirstPerson.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
 		<a href="../src/exampleFirstPerson.html" target="_blank">Open in a new tab</a>
 
 	</body>
 </html>
-
-exampleFirstPerson
