--- a/html/geometriesExternalObjectsInfo.html
+++ b/html/geometriesExternalObjectsInfo.html
@@ -56,5 +56,10 @@
 			}
 		}
 		</code>
+
+		<p>
+			<b>Important:</b> To load external files you have to create a local server. See detailed information of why and how <a href="https://threejs.org/docs/#manual/en/introduction/How-to-run-things-locally" target="_blank">here</a>
+		</p>
+
 	</body>
 </html>
