Drag Control Example added

--- a/html/geometriesExternalObjectsInfo.html
+++ b/html/geometriesExternalObjectsInfo.html
@@ -58,7 +58,7 @@
 		</code>
 
 		<p>
-			<strong>Important:</strong> To load external files you have to create a local server. See detailed information of why and how <a href="https://threejs.org/docs/#manual/en/introduction/How-to-run-things-locally" target="_blank">here</a>
+			<strong>Important:</strong> To load external files you have to create a local server. See detailed information of why and how <a href="https://threejs.org/docs/#manual/en/introduction/How-to-run-things-locally" target="_blank">here</a>.
 		</p>
 
 	</body>
