--- a/html/animationExternalObjectsInfo.html
+++ b/html/animationExternalObjectsInfo.html
@@ -74,5 +74,10 @@
 			(...)
 		}
 		</code>
+
+		<p>
+			<strong>Important:</strong> To load external files you have to create a local server. See detailed information of why and how <a href="https://threejs.org/docs/#manual/en/introduction/How-to-run-things-locally" target="_blank">here</a>.
+		</p>
+				
 	</body>
 </html>
