--- a/html/textureExternalObjectsInfo.html
+++ b/html/textureExternalObjectsInfo.html
@@ -50,5 +50,9 @@
 			<figcaption>Figure 2 - Orca object composed by basic, metallic and normal textures.</figcaption>
 		</figure>
 
+		<p>
+			<strong>Important:</strong> To load external files you have to create a local server. See detailed information of why and how <a href="https://threejs.org/docs/#manual/en/introduction/How-to-run-things-locally" target="_blank">here</a>.
+		</p>
+
 	</body>
 </html>
