Drag Control Example added

--- a/src/exampleDragControl.html
+++ b/src/exampleDragControl.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt">
+
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title></title>
+    <link rel="shortcut icon" href="../favicon.ico">
+    <link rel="stylesheet" href="../html/resources/default.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="text/javascript" charset="UTF-8" src="../libs/three/three.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/util/Stats.js"></script>    
     <script type="text/javascript" charset="UTF-8" src="../libs/util/util.js"></script>       
@@ -14,10 +18,13 @@
     <script type="text/javascript" src="exampleDragControl.js"></script>
     <title>DragControls Test</title>
 </head>
+
 <body>
-    <div id="webgl-output"></div>
-    <script type="text/javascript"> 
+    <div id="webgl-output">
+      <script type="text/javascript">
         main();
-    </script>
+      </script>
+    </div>
 </body>
+
 </html>
