--- a/html/lightingSpotlightDetailsInfo.html
+++ b/html/lightingSpotlightDetailsInfo.html
@@ -17,7 +17,9 @@
 		</p>
 
 		<p>
-			In the project below, you can change several parameters of the spotlight like intensity, penumbra, light distance, angle, position of the light and position of it's target. You can also change shadows' parameters like shadow map size and the near/far of the shadows' camera.
+			In the project below, you can change several parameters of the spotlight like intensity, penumbra, light distance, angle, 
+			position of the light and position of its target. You can also change shadows' parameters like shadow map size and
+			 the near/far of the shadows' camera.
 		</p>
 
 		<iframe src="../src/lightingSpotlightDetails.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
@@ -31,7 +33,7 @@
 			that's an interesting value in most of the cases. In Figure 1.b penumbra is set to zero, showing the resolution of the 
 			ground plane used. Figura 1.c shows a high resolution ground plane (400 x 400) with penumbra also set to zero. 
 			<b>This configuration should be avoided</b> due to its high computational cost. In general, it's better to use 
-			the penumbra parameter higher than 0.5 to produce better visual effects. 
+			the penumbra parameter as 0.5 or higher to produce better visual effects. 
 		</p>
 
 		<figure>
