Adding virtualCamera example

--- a/html/virtualCameraInfo.html
+++ b/html/virtualCameraInfo.html
@@ -17,11 +17,12 @@
 			(our point of view) and a virtual camera associated with a new viewport with its point of view. 
 		</p>
 		<p>
-			You can change the main parameters of the virtual camera link its near and far planes, 
-			its field of view (fov) and up vector, implemented as an angle to facilitate its association with a real camera.
+			You can change the main parameters of the virtual camera like its near and far planes, 
+			its field of view (fov) and up vector, implemented as an angle to facilitate its association 
+			with the rotation of a real camera.
 		</p>
 		<p>
-			You can also change the position of the camera and where its point to (its look at). 
+			You can also change the position of the camera and where its point to (its 'look at'). 
 			Finally, you can view/hide the camera helper.
 		</p>
 
