Fix HTML info of some files

--- a/html/animationExternalObjectsInfo.html
+++ b/html/animationExternalObjectsInfo.html
@@ -26,7 +26,7 @@
 		<code>
 		function loadGLTFFile(modelPath, modelName, centerObject)
 		{
-			var loader = new THREE.GLTFLoader( );
+			var loader = new GLTFLoader( );
 			(...)
 			// Create animationMixer and push it in the array of mixers
 			var mixerLocal = new THREE.AnimationMixer(obj);
