--- a/html/lightingMaterialsInfo.html
+++ b/html/lightingMaterialsInfo.html
@@ -30,7 +30,7 @@
 			specular:"rgb(255,255,255)" // Color of the specular component
 		});
 
-		var geometry = new THREE.TeapotGeometry(0.5);
+		var geometry = new TeapotGeometry(0.5);
 
 		var obj = new THREE.Mesh(geometry, material);
 			obj.castShadow = true;
