--- a/html/AR_HitAndBuildInfo.html
+++ b/html/AR_HitAndBuildInfo.html
@@ -11,12 +11,13 @@
 		<h1>AR - Hit and Build</h1>
 		<br>
 		<hr>
-		<p>This example uses WebXR to map the environment and when a rectile is visible you can click your mobile screen to add and object.</p>
+		<p>This example uses WebXR to map the environment.</p>
 
 		<p>To play this example on a computer you have to install the <a href="https://chrome.google.com/webstore/detail/webxr-api-emulator/mjddjgeghkdijejnciaefnkjmkafnnje" target="_blank">WebXR API Emulator</a> and select the "Samsung Galaxy S8+" device.</p>
 
+		<p>Try to focus your mobile phone on plane around you such as your floor, a table etc. When a white rectile is visible you can click your mobile screen to add and object.</p>
+
 		<iframe src="../src/AR_HitAndBuild.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
-		<a href="../src/AR_HitAndBuild.html" target="_blank">Open in a new tab</a>
 
 	</body>
 </html>
