AR Hit and build example fixed

--- a/html/AR_HitAndBuildInfo.html
+++ b/html/AR_HitAndBuildInfo.html
@@ -11,13 +11,21 @@
 		<h1>AR - Hit and Build</h1>
 		<br>
 		<hr>
-		<p>This example uses WebXR to map the environment.</p>
+		<p>This example uses WebXR to add virtual objects without the use of fiducial markers.</p>
 
-		<p>To play this example on a computer you have to install the <a href="https://chrome.google.com/webstore/detail/webxr-api-emulator/mjddjgeghkdijejnciaefnkjmkafnnje" target="_blank">WebXR API Emulator</a> and select the "Samsung Galaxy S8+" device.</p>
+		<p>The example is best suited for use with mobile devices. 
+			After clicking on the "Open" button below, press the "Start VR" button. 
+			This button is only available if your mobile device is ready for WebXR.
+		    Try moving your phone and focusing on flat objects around you, such as on the floor, a table, etc.
+		    When a white rectangle is visible, you can click on your phone's screen to add an object.</p>
 
-		<p>Try to focus your mobile phone on plane around you such as your floor, a table etc. When a white rectile is visible you can click your mobile screen to add and object.</p>
+		<p>Note: To test this example on a computer you have to install the 
+			<a href="https://chrome.google.com/webstore/detail/webxr-api-emulator/mjddjgeghkdijejnciaefnkjmkafnnje" target="_blank">
+			WebXR API Emulator</a> extension and select the "Samsung Galaxy S8+" device.</p>
 
-		<iframe src="../src/AR_HitAndBuild.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
+		<!--iframe src="../src/AR_HitAndBuild.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe-->
+		<!--a href="../src/AR_HitAndBuild.html" target="_blank">Open AR_HitAndBuild Example</a-->		
+		<button type="button" onclick="location.href='../src/AR_HitAndBuild.html';">Open AR_HitAndBuild Example</button>
 
 	</body>
 </html>
