--- a/src/AR_HitAndBuild.html
+++ b/src/AR_HitAndBuild.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">  
 </head>
 
-<body>
+<body style="background-color:black;">
   <div id="webgl-output">
     <script type="module" src="AR_HitAndBuild.js"></script>
   </div>
