WebXR VR Panorama added

--- a/src/webxr_AR_HitAndBuild.html
+++ b/src/webxr_AR_HitAndBuild.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Basic Scene</title>
+    <title>AR - Hit'n Build</title>
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" href="../html/resources/default.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">  
@@ -9,7 +9,7 @@
 
 <body style="background-color:black;">
   <div id="webgl-output">
-    <script type="module" src="AR_HitAndBuild.js"></script>
+    <script type="module" src="webxr_AR_HitAndBuild.js"></script>
   </div>
 </body>
 
