--- a/html/webxr_AR_HitAndBuildInfo.html
+++ b/html/webxr_AR_HitAndBuildInfo.html
@@ -16,8 +16,8 @@
 		<p>The example is best suited for use with mobile devices. 
 			After clicking on the "Open Example" button below, press the "Start AR" button. 
 			This button is only available if your mobile device is ready for WebXR.
-		    Try moving your phone and focusing on flat objects around you, such as on the floor, a table, etc.
-		    When a white rectangle is visible, you can click on your phone's screen to add an object.</p>
+		    Try moving your phone and focusing on flat objects around you, such a table, your floor etc.
+		    When a white rectile is visible (it might take a while), you can click on your phone's screen to add an object.</p>
 
 		<button type="button" onclick="window.open('../src/webxr_AR_HitAndBuild.html','_blank')">Open Example</button>
 
