AR example in modules and mirror fixes. Merge example was removed

--- a/src/AR_Basic.html
+++ b/src/AR_Basic.html
@@ -6,20 +6,13 @@
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" href="../html/resources/default.css">
     <meta charset="UTF-8">
-    <!-- Changing viewport mess with AR Projection
-    <meta name="viewport" content="width=device-width, initial-scale=1">    -->
+    <!-- Changing viewport mess with AR Projection -->
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-
-    <!-- Not working with threejs' version r127 -->
-    <script type="text/javascript" charset="UTF-8" src="../libs/old/three_r116.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="../libs/old/dat.gui.min.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="../libs/old/util_old.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="../libs/AR/ar.js"></script>
 </head>
 
 <body>
   <div id="webgl-output">
-    <script type="text/javascript" src="AR_Basic.js" ></script>
+    <script type="module" src="AR_Basic.js"></script>
   </div>
 </body>
 
