--- a/src/raytracingExample1.html
+++ b/src/raytracingExample1.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
@@ -7,16 +6,11 @@
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" href="../html/resources/default.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Working better in an old version of three.js --------------->
-    <script type="text/javascript" charset="UTF-8" src="../libs/old/three.min.ray.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="../libs/old/util_old.js"></script>
-		<script type="text/javascript" charset="UTF-8" src="../libs/other/raytracingRenderer.js"></script>
 </head>
 
 <body>
   <div id="webgl-output">
-    <script type="text/javascript" src="raytracingExample1.js"></script>
+    <script type="module" src="raytracingExample1.js"></script>
   </div>
 </body>
 </html>
