--- a/src/webxr_VR_Teleport.html
+++ b/src/webxr_VR_Teleport.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Basic Scene</title>
+    <title>VR Teleport (WebXR)</title>
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" href="../html/resources/default.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">  
 </head>
 
-<body>
+<body style="background-color:black;">
   <div id="webgl-output">
-    <script type="module" src="basicScene.js"></script>
+    <script type="module" src="webxr_VR_Teleport.js"></script>
   </div>
 </body>
 
