VR Teleport example added to test

--- a/html/webxr_AR_HitAndBuildInfo.html
+++ b/html/webxr_AR_HitAndBuildInfo.html
@@ -24,5 +24,9 @@
 		<p>Note: To test this example on a computer you have to install the 
 			<a href="https://chrome.google.com/webstore/detail/webxr-api-emulator/mjddjgeghkdijejnciaefnkjmkafnnje" target="_blank">
 			WebXR API Emulator</a> extension and select the "Samsung Galaxy S8+" device.</p>
+
+		<p>Further information about webxr can be found 
+			<a href="https://developer.mozilla.org/en-US/docs/Web/API/WebXR_Device_API" target="_blank">here</a>.
+		</p>			
 	</body>
 </html>
