--- a/html/webxr_VR_PanoramaInfo.html
+++ b/html/webxr_VR_PanoramaInfo.html
@@ -23,5 +23,9 @@
 		<p>Note: To test this example on a computer you have to install the 
 			<a href="https://chrome.google.com/webstore/detail/webxr-api-emulator/mjddjgeghkdijejnciaefnkjmkafnnje" target="_blank">
 			WebXR API Emulator</a> extension and select "Google Cardboard" or another HMD.</p>
+
+		<p>Further information about webxr can be found 
+			<a href="https://developer.mozilla.org/en-US/docs/Web/API/WebXR_Device_API" target="_blank">here</a>.
+		</p>			
 	</body>
 </html>
